Fix: Increase Music Player right margin to 25px to clear scrollbar.

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -1634,7 +1634,8 @@ input:checked + .slider:before {
 #music-player-container {
     position: fixed;
     top: 70px; /* Below navbar */
-    left: 2px;
+    right: 25px;
+    left: auto;
     bottom: auto;
     right: auto;
     z-index: 1001;
